@@ -1,3 +1,8 @@
+2012-05-04  Richard Guenther  <rguenther@suse.de>
+
+	* lang.opt (fwpa): Do not mark as Optimization.
+	(fltrans): Likewise.
+
 2012-03-22  Release Manager
 
 	* GCC 4.7.0 released.
