@@ -1,3 +1,7 @@
+2012-05-04  Richard Guenther  <rguenther@suse.de>
+
+	* gcc.dg/lto/pr53214_0.c: New testcase.
+
 2012-05-04  Eric Botcazou  <ebotcazou@adacore.com>
 
 	* gcc.target/ia64/pr48496.c: New test.
